--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mohammedmansour.task">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -23,6 +24,10 @@
         <activity
             android:name=".SearchActivity"
             android:label="@string/title_activity_search"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".PersonActivity"
+            android:label="@string/title_activity_person"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
